Plugin list versions. titlecase list fix spacing.

--- a/engine/styles/ares.scss
+++ b/engine/styles/ares.scss
@@ -1903,6 +1903,10 @@ ul.reference-help-list > li:not(:last-child)::after {
   padding-right: 10px;
 }
 
+.server-plugin {
+  padding-right: 15px;
+}
+
 .prefs-list-item {
   display: flex;
   flex-direction: row;
